feat: add create event ticket
