# docs/swagger.json
@@ -194,12 +194,6 @@
                             "$ref": "#/definitions/api.EventListResponse"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorNotFound"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
